codex-agent-runtime-desktop/native/c-api/include/codex_agent.h

typedef int32_t codex_agent_status_t;
typedef struct codex_agent_context codex_agent_context_t;
typedef struct codex_agent_mcp_environment_variable codex_agent_mcp_environment_variable_t;
typedef struct codex_agent_mcp_oauth_configuration codex_agent_mcp_oauth_configuration_t;
typedef struct codex_agent_mcp_tool_configuration codex_agent_mcp_tool_configuration_t;
typedef struct codex_agent_mcp_transport codex_agent_mcp_transport_t;
typedef struct codex_agent_mcp_transport_http codex_agent_mcp_transport_http_t;
typedef struct codex_agent_mcp_transport_stdio codex_agent_mcp_transport_stdio_t;
typedef struct codex_agent_mcp_server_configuration codex_agent_mcp_server_configuration_t;
typedef int32_t codex_agent_mcp_environment_source_t;
typedef int32_t codex_agent_mcp_tool_approval_t;
typedef int32_t codex_agent_mcp_transport_kind_t;
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_mcp_environment_variable_destroy(
    codex_agent_context_t *context,
    codex_agent_mcp_environment_variable_t **variable);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_mcp_environment_variable_name_copy(
    codex_agent_context_t *context,
    codex_agent_mcp_environment_variable_t *variable,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_mcp_environment_variable_source(
    codex_agent_context_t *context,
    codex_agent_mcp_environment_variable_t *variable,
    int32_t *out_has_source,
    codex_agent_mcp_environment_source_t *out_source);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_mcp_oauth_configuration_destroy(
    codex_agent_context_t *context,
    codex_agent_mcp_oauth_configuration_t **configuration);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_mcp_oauth_configuration_has_client_id(
    codex_agent_context_t *context,
    codex_agent_mcp_oauth_configuration_t *configuration,
    int32_t *out_has_client_id);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_mcp_oauth_configuration_client_id_copy(
    codex_agent_context_t *context,
    codex_agent_mcp_oauth_configuration_t *configuration,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_mcp_oauth_configuration_callback_port(
    codex_agent_context_t *context,
    codex_agent_mcp_oauth_configuration_t *configuration,
    int32_t *out_has_callback_port,
    int32_t *out_callback_port);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_mcp_tool_configuration_destroy(
    codex_agent_context_t *context,
    codex_agent_mcp_tool_configuration_t **configuration);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_mcp_tool_configuration_approval(
    codex_agent_context_t *context,
    codex_agent_mcp_tool_configuration_t *configuration,
    int32_t *out_has_approval,
    codex_agent_mcp_tool_approval_t *out_approval);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_mcp_transport_http_destroy(
    codex_agent_context_t *context,
    codex_agent_mcp_transport_http_t **transport);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_mcp_transport_http_url_copy(
    codex_agent_context_t *context,
    codex_agent_mcp_transport_http_t *transport,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_mcp_transport_http_has_bearer_token_environment_variable(
    codex_agent_context_t *context,
    codex_agent_mcp_transport_http_t *transport,
    int32_t *out_has_value);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_mcp_transport_http_bearer_token_environment_variable_copy(
    codex_agent_context_t *context,
    codex_agent_mcp_transport_http_t *transport,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_mcp_transport_http_has_headers(
    codex_agent_context_t *context,
    codex_agent_mcp_transport_http_t *transport,
    int32_t *out_has_headers);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_mcp_transport_http_headers_count(
    codex_agent_context_t *context,
    codex_agent_mcp_transport_http_t *transport,
    size_t *out_count);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_mcp_transport_http_headers_key_copy_at(
    codex_agent_context_t *context,
    codex_agent_mcp_transport_http_t *transport,
    size_t index,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_mcp_transport_http_headers_value_copy_at(
    codex_agent_context_t *context,
    codex_agent_mcp_transport_http_t *transport,
    size_t index,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_mcp_transport_http_has_environment_headers(
    codex_agent_context_t *context,
    codex_agent_mcp_transport_http_t *transport,
    int32_t *out_has_environment_headers);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_mcp_transport_http_environment_headers_count(
    codex_agent_context_t *context,
    codex_agent_mcp_transport_http_t *transport,
    size_t *out_count);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_mcp_transport_http_environment_headers_key_copy_at(
    codex_agent_context_t *context,
    codex_agent_mcp_transport_http_t *transport,
    size_t index,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_mcp_transport_http_environment_headers_value_copy_at(
    codex_agent_context_t *context,
    codex_agent_mcp_transport_http_t *transport,
    size_t index,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_mcp_transport_http_has_headers_helper(
    codex_agent_context_t *context,
    codex_agent_mcp_transport_http_t *transport,
    int32_t *out_has_headers_helper);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_mcp_transport_http_headers_helper_copy(
    codex_agent_context_t *context,
    codex_agent_mcp_transport_http_t *transport,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_mcp_transport_stdio_destroy(
    codex_agent_context_t *context,
    codex_agent_mcp_transport_stdio_t **transport);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_mcp_transport_stdio_command_copy(
    codex_agent_context_t *context,
    codex_agent_mcp_transport_stdio_t *transport,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_mcp_transport_stdio_arguments_count(
    codex_agent_context_t *context,
    codex_agent_mcp_transport_stdio_t *transport,
    size_t *out_count);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_mcp_transport_stdio_argument_copy_at(
    codex_agent_context_t *context,
    codex_agent_mcp_transport_stdio_t *transport,
    size_t index,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_mcp_transport_stdio_has_working_directory(
    codex_agent_context_t *context,
    codex_agent_mcp_transport_stdio_t *transport,
    int32_t *out_has_working_directory);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_mcp_transport_stdio_working_directory_copy(
    codex_agent_context_t *context,
    codex_agent_mcp_transport_stdio_t *transport,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_mcp_transport_stdio_has_environment(
    codex_agent_context_t *context,
    codex_agent_mcp_transport_stdio_t *transport,
    int32_t *out_has_environment);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_mcp_transport_stdio_environment_count(
    codex_agent_context_t *context,
    codex_agent_mcp_transport_stdio_t *transport,
    size_t *out_count);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_mcp_transport_stdio_environment_key_copy_at(
    codex_agent_context_t *context,
    codex_agent_mcp_transport_stdio_t *transport,
    size_t index,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_mcp_transport_stdio_environment_value_copy_at(
    codex_agent_context_t *context,
    codex_agent_mcp_transport_stdio_t *transport,
    size_t index,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_mcp_transport_stdio_forwarded_environment_count(
    codex_agent_context_t *context,
    codex_agent_mcp_transport_stdio_t *transport,
    size_t *out_count);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_mcp_transport_stdio_forwarded_environment_at(
    codex_agent_context_t *context,
    codex_agent_mcp_transport_stdio_t *transport,
    size_t index,
    codex_agent_mcp_environment_variable_t **out_variable);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_mcp_transport_destroy(
    codex_agent_context_t *context,
    codex_agent_mcp_transport_t **transport);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_mcp_transport_kind(
    codex_agent_context_t *context,
    codex_agent_mcp_transport_t *transport,
    codex_agent_mcp_transport_kind_t *out_kind);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_mcp_transport_http(
    codex_agent_context_t *context,
    codex_agent_mcp_transport_t *transport,
    codex_agent_mcp_transport_http_t **out_http);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_mcp_transport_stdio(
    codex_agent_context_t *context,
    codex_agent_mcp_transport_t *transport,
    codex_agent_mcp_transport_stdio_t **out_stdio);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_mcp_server_configuration_destroy(
    codex_agent_context_t *context,
    codex_agent_mcp_server_configuration_t **configuration);