codex-agent-bindings/csharp/src/CodexAgent/Interop/NativeMcpMethods.cs

using System.Runtime.CompilerServices;
using System.Runtime.InteropServices;

namespace CodexAgent.Interop;

internal enum NativeMcpTransportKind
{
    Http = 0,
    Stdio = 1,
}

internal static unsafe partial class NativeMethods
{
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_environment_variable_destroy")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpEnvironmentVariableDestroy(nint context, ref nint value);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_environment_variable_name_copy")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpEnvironmentVariableNameCopy(nint context, nint value, byte* buffer, nuint capacity, out nuint required);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_environment_variable_source")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpEnvironmentVariableSource(nint context, nint value, out int hasValue, out CodexMcpEnvironmentSource source);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_oauth_configuration_destroy")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpOauthConfigurationDestroy(nint context, ref nint value);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_oauth_configuration_has_client_id")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpOauthConfigurationHasClientId(nint context, nint value, out int hasValue);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_oauth_configuration_client_id_copy")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpOauthConfigurationClientIdCopy(nint context, nint value, byte* buffer, nuint capacity, out nuint required);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_oauth_configuration_callback_port")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpOauthConfigurationCallbackPort(nint context, nint value, out int hasValue, out int port);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_tool_configuration_destroy")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpToolConfigurationDestroy(nint context, ref nint value);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_tool_configuration_approval")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpToolConfigurationApproval(nint context, nint value, out int hasValue, out CodexMcpToolApproval approval);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_transport_destroy")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpTransportDestroy(nint context, ref nint value);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_transport_kind")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpTransportKind(nint context, nint value, out NativeMcpTransportKind kind);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_transport_http")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpTransportHttp(nint context, nint value, out nint http);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_transport_stdio")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpTransportStdio(nint context, nint value, out nint stdio);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_transport_http_destroy")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpTransportHttpDestroy(nint context, ref nint value);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_transport_http_url_copy")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpTransportHttpUrlCopy(nint context, nint value, byte* buffer, nuint capacity, out nuint required);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_transport_http_has_bearer_token_environment_variable")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpTransportHttpHasBearerTokenEnvironmentVariable(nint context, nint value, out int hasValue);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_transport_http_bearer_token_environment_variable_copy")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpTransportHttpBearerTokenEnvironmentVariableCopy(nint context, nint value, byte* buffer, nuint capacity, out nuint required);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_transport_http_has_headers")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpTransportHttpHasHeaders(nint context, nint value, out int hasValue);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_transport_http_headers_count")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpTransportHttpHeadersCount(nint context, nint value, out nuint count);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_transport_http_headers_key_copy_at")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpTransportHttpHeadersKeyCopyAt(nint context, nint value, nuint index, byte* buffer, nuint capacity, out nuint required);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_transport_http_headers_value_copy_at")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpTransportHttpHeadersValueCopyAt(nint context, nint value, nuint index, byte* buffer, nuint capacity, out nuint required);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_transport_http_has_environment_headers")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpTransportHttpHasEnvironmentHeaders(nint context, nint value, out int hasValue);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_transport_http_environment_headers_count")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpTransportHttpEnvironmentHeadersCount(nint context, nint value, out nuint count);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_transport_http_environment_headers_key_copy_at")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpTransportHttpEnvironmentHeadersKeyCopyAt(nint context, nint value, nuint index, byte* buffer, nuint capacity, out nuint required);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_transport_http_environment_headers_value_copy_at")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpTransportHttpEnvironmentHeadersValueCopyAt(nint context, nint value, nuint index, byte* buffer, nuint capacity, out nuint required);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_transport_http_has_headers_helper")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpTransportHttpHasHeadersHelper(nint context, nint value, out int hasValue);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_transport_http_headers_helper_copy")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpTransportHttpHeadersHelperCopy(nint context, nint value, byte* buffer, nuint capacity, out nuint required);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_transport_stdio_destroy")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpTransportStdioDestroy(nint context, ref nint value);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_transport_stdio_command_copy")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpTransportStdioCommandCopy(nint context, nint value, byte* buffer, nuint capacity, out nuint required);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_transport_stdio_arguments_count")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpTransportStdioArgumentsCount(nint context, nint value, out nuint count);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_transport_stdio_argument_copy_at")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpTransportStdioArgumentCopyAt(nint context, nint value, nuint index, byte* buffer, nuint capacity, out nuint required);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_transport_stdio_has_working_directory")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpTransportStdioHasWorkingDirectory(nint context, nint value, out int hasValue);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_transport_stdio_working_directory_copy")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpTransportStdioWorkingDirectoryCopy(nint context, nint value, byte* buffer, nuint capacity, out nuint required);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_transport_stdio_has_environment")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpTransportStdioHasEnvironment(nint context, nint value, out int hasValue);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_transport_stdio_environment_count")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpTransportStdioEnvironmentCount(nint context, nint value, out nuint count);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_transport_stdio_environment_key_copy_at")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpTransportStdioEnvironmentKeyCopyAt(nint context, nint value, nuint index, byte* buffer, nuint capacity, out nuint required);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_transport_stdio_environment_value_copy_at")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpTransportStdioEnvironmentValueCopyAt(nint context, nint value, nuint index, byte* buffer, nuint capacity, out nuint required);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_transport_stdio_forwarded_environment_count")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpTransportStdioForwardedEnvironmentCount(nint context, nint value, out nuint count);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_transport_stdio_forwarded_environment_at")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpTransportStdioForwardedEnvironmentAt(nint context, nint value, nuint index, out nint variable);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_server_configuration_destroy")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpServerConfigurationDestroy(nint context, ref nint value);
